--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
                 <div>
                     <!-- Aba de Inserção de Texto -->
                     <div id="content-text">
-                        <textarea id="email-text" rows="8" class="w-full p-3 bg-gray-50 border border-gray-300 rounded-md focus:ring-2 focus:ring-violet-500 focus:border-violet-500 transition duration-200 text-gray-800 placeholder-gray-400" placeholder="Assunto: Status do Projeto..."></textarea>
+                        <textarea id="email-text" rows="8" class="w-full p-3 bg-gray-50 border border-gray-300 rounded-md focus:ring-2 focus:ring-violet-500 focus:border-violet-500 transition duration-200 text-gray-800 placeholder-gray-400" placeholder="Insira o texto completo do e-mail que deseja classificar."></textarea>
                     </div>
 
                     <!-- Aba de Upload de Arquivo -->
